Tue Sep 21 13:36:23 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/DAnCE_Utility.cpp:
        * tools/XML/DAnCE_XML_Utils_Export.h:
        * tools/XML/XML.mpc:
        * tools/XML/XML_Error_Handler.h:
        * tools/XML/XML_Helper.h:
        * tools/XML/XML_Helper.tpp:
        * tools/XML/XML_Schema_Resolver.h:
        * tools/XML/XercesString.h:
        * tools/XML/CIAO_XML_Utils_Export.h:
          Updated export macros for Windows

Fri Sep 17 18:52:11 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * DAnCE/DAnCE_Properties.mpc:

          Set up "make install" commands for rules.dance.GNU.

Fri Sep 17 08:40:30 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * tests/Config_Handlers/test.cdp:
        * tests/DeploymentPlanDump/CcmDance2-host1.cdp:
        * tests/DeploymentPlanDump/CcmDance2-host2.cdp:
        * tests/DeploymentPlanDump/CcmDance2.cdp:
        * tests/DeploymentPlanDump/CcmDance4-host1.cdp:
        * tests/DeploymentPlanDump/CcmDance4-host2.cdp:
        * tests/DeploymentPlanDump/NewCcmDance1.cdp:
        * tests/LocalityManager/ExplicitExec/Deployment.cdp:
        * tests/LocalityManager/ProcessName/Deployment.cdp:
        * tests/LocalityManager/SpawnMultiple/Deployment.cdp:
        * tests/LocalityManager/SpawnOne/Deployment.cdp:
        * tests/Parsing/InvalidConfigPropValueDeclaration.cdp:
        * tests/Parsing/InvalidConnection.cdp:
        * tests/Parsing/InvalidDatatypeValue.cdp:
        * tests/Parsing/InvalidElement.cdp:
        * tests/Parsing/InvalidReference.cdp:
          Added Id string.

Tue Sep 14 11:28:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/DAnCE.doxygen:
          Updated input path

Sun Sep 12 19:21:42 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * rules.dance.GNU:

          Fixes.

Sun Sep 12 18:47:31 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * rules.dance.GNU:

          Adapted from CIAO.
